Fix build on Alpine Linux
Apline Linux is based on musl libc and does not contain libio.h
Therefore NULL should be defined explicitly if libio.h not detected in
system.

--- a/configure.ac
+++ b/configure.ac
@@ -67,6 +67,8 @@ AC_CHECK_HEADERS([execinfo.h],
   [AC_DEFINE(HAVE_BACKTRACE, [1], [Define to 1 if backtrace is supported])], [])
 AC_CHECK_HEADERS([sys/epoll.h], [], [])
 AC_CHECK_HEADERS([sys/event.h], [], [])
+AC_CHECK_HEADERS([libio.h],
+  [AC_DEFINE(HAVE_LIBIO_H, [1], [Define to 1 if libio.h present])], [])
 
 # Checks for libraries
 AC_CHECK_LIB([m], [pow])
